2007-05-11  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: increased precision of IIR

* acpu.c, apokeysnd.c, asap.c, asap.h, asap_internal.h, java/ASAP.ppjava,
  java/ASAP_ModuleInfo.java, java/ASAP2WAV.java, win32/Makefile:
  ASAP can be compiled as pure Java!


2007-05-10  Piotr Fusik  <fox@scene.pl>
* acpu.c, acpu.h, apokeysnd.c, apokeysnd.h, asap.c, asap.h, asap_internal.h,
  asap2wav.c, configure.ac, config.guess, config.sub, Makefile.in,
  gsplayer/gspasap.c, win32/Makefile, win32/settings.c, win32/settings.h,
  win32/foobar2000/foo_asap.cpp, win32/winamp/in_asap.c,
  win32/wasap/wasap.c, win32/wasap/wasap.rc, win32/wasap/resource.h,
  xmms/libasap.c, INSTALL: removed all static variables; ASAP now uses
  apokeysnd and no longer depends on Atari800

* win32/winamp/in_asap.c: enabled Winamp equalizer support

* java/ASAP.ppjava, acpu.c, asap_internal.h, win32/Makefile, TODO:
  6502 emulator can be compiled as Java


2007-05-09  Piotr Fusik  <fox@scene.pl>
* acpu.c, acpu.h, asap.c, win32/Makefile: new 6502 emulator

* acpu.c, acpu.h, asap.c, apokeysnd.c, apokeysnd.h: POKEY timer interrupts


2007-05-07  Piotr Fusik  <fox@scene.pl>
* asap.c, asap_internal.h, apokeysnd.c: handle TYPE D and TYPE S SAP files

* apokeysnd.c: corrected handling of reload_cycles


** 0.3.0 released on 2007-05-06

2007-05-06  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c: made stereo work

* asap2wav.c, win32/Makefile: ASAP2WAV with experimental POKEY emulator

* gsplayer/gspasap.txt, INSTALL: info about the GSPlayer plugin


2007-05-06  Kostas Nakos  <knakos@gmail.com>
* win32/Makefile, win32/config.h, win32/settings.rc: GSPlayer plugin
  for Windows CE


2007-05-05  Piotr Fusik  <fox@scene.pl>
* apokeysnd.c, apokeysnd.h, asap.c, asap.h, win32/wasap/wasap.c,
  win32/wasap/wasap.rc, win32/Makefile: new experimental POKEY sound emulator


2007-05-04  Piotr Fusik  <fox@scene.pl>
* chksap.pl: TIME tag can include hundredths of seconds
